Fix for sidebar not stretching to screen size when zoomed in

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	display: flex;
-	height: 100vh;
+	min-height: 100vh;
 	background-color: rgb(46, 56, 70);
 	line-height: 1;
 	font-family: sans-serif;
